[package]
name = "meanderer"
version = "0.1.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering"]

[profile.release]
lto = true

[dependencies]
error-chain = "^0.11"
image = "^0.19"
imageproc = "^0.15"
itertools = "0.7.3"
rand = "^0.5"
termion = "^1.5"
tui = "^0.2"

[dev-dependencies]
criterion = "^0.2"

[[bench]]
name = "algorithms"
harness = false
